[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybersecurity-mcp-server"
version = "0.1.0"
description = "Cybersecurity data for AI agents — CVE database, vulnerability search, threat intelligence, exploit info"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AiAgentKarl"}]
keywords = ["mcp", "cybersecurity", "cve", "vulnerabilities", "security", "threat-intelligence"]
dependencies = ["mcp>=1.0.0", "httpx>=0.27.0", "pydantic>=2.0.0"]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/cybersecurity-mcp-server"
Repository = "https://github.com/AiAgentKarl/cybersecurity-mcp-server"

[project.scripts]
cybersecurity-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
